--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,6 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
-
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -17,3 +14,5 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+FACADE_STATS_URL=
